--- a/style.css
+++ b/style.css
@@ -15,39 +15,32 @@ body
     margin: 0;
     height: 100%;
     width: 100%;
-    background-color: black;
+    background-color: rgb(31, 31, 31);
     display: flex;
     font-family: 'Courgette', cursive;
     color: white;
 }
+/* PAGE INDEX */
 nav
 {
     height: 100%;
     width: 20%;
     background-color: rgb(22, 22, 22);
     position: fixed;
-    transition-property: background;
-    transition-duration: 1s;
-}
-nav:hover
-{
-    background-color: #333;
-}
-nav:hover #liens a
-{
-    color: white;
 }
 nav #user
 {
     height: 20%;
     width: 100%;
-    display: flex;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid white;
 }
 nav #user img
 {
-    margin-left: 10%;
-    margin-top: 10%;
+    margin-top: 5%;
+    margin-left: 35%;
     width: 30%;
     height: 60%;
     border-radius: 50%;
@@ -55,8 +48,10 @@ nav #user img
 }
 nav #user h2
 {
-    margin-left: 13%;
-    margin-top: 20%;
+    font-family: 'Courgette', cursive;
+    color: rgb(120, 96, 255);
+    margin-top: 2.5%;
+    text-align: center;
 }
 nav #liens
 {
@@ -73,17 +68,17 @@ nav #liens a
     margin: 0;
     font-size: 20px;
     text-decoration: none;
-    color: #333;
+    color: white;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    transition-property: color;
-    transition-duration: 1s;
+    transition-property: color initial;
+    transition-duration: 700ms;
 }
 nav #liens a:hover
 {
-    color: rgb(131, 131, 131);
+    color: rgb(97, 58, 189);
 }
-main
+main#main_index
 {
     margin-left: 20%;
     height: 100%;
@@ -91,15 +86,16 @@ main
     overflow: hidden;
     scroll-behavior: smooth;
 }
-main header
+main#main_index header
 {
     height: 100%;
     width: 100%;
-    background-image: url('images/backgrounds/header.jpg');
+    background-image: url('ressources/images/backgrounds/header.jpg');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 120%;
+    background-position-x: 50%;
 }
-main header img
+main#main_index header img
 {
     position: sticky;
     height: 10%;
@@ -109,15 +105,16 @@ main header img
     animation: arrow_anim 4s infinite;
 }
 
-main section
+main#main_index section
 {
     height: 100%;
     width: 100%;
-    background-image: url('images/backgrounds/section.jpg');
+    background-image: url('ressources/images/backgrounds/section.jpg');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 120%;
+    background-position-x: 100%;
 }
-main section img
+main#main_index section img
 {
     position: sticky;
     height: 10%;
@@ -126,7 +123,7 @@ main section img
     transform: rotate(180deg);
     animation: arrow_anim 4s infinite;
 }
-main section article
+main#main_index section article
 {
     min-width: 500px;
     min-height: 500px;
@@ -137,7 +134,7 @@ main section article
     display: flex;
     margin-left: 15%;
 }
-main section article #title
+main#main_index section article #title
 {
     height: 10%;
     width: 100%;
@@ -146,7 +143,7 @@ main section article #title
     border-radius: 10px;
 }
 
-main section article h1
+main#main_index section article h1
 {
     font-family: 'Courgette', cursive;
     margin: 0;
@@ -155,4 +152,14 @@ main section article h1
     font-size: 30px;
     margin-top: 1%;
     color: white;
+}
+
+/* PAGE REGISTER */
+main#register_content
+{
+    height: 60%;
+    width: 30%;
+    background-color: red;
+    margin-left: 35%;
+    margin-top: 10%;
 }
