--- a/style.css
+++ b/style.css
@@ -148,12 +148,13 @@ main#main_index section article
 {
     min-width: 500px;
     min-height: 500px;
-    height: 70%;
-    width: 70%;
+    height: 50%;
+    width: 50%;
     padding: 1%;
     background-color: rgb(51, 51, 51);
     display: flex;
-    margin-left: 15%;
+    flex-direction: column;
+    margin-left: 23%;
 }
 main#main_index section article #title
 {
@@ -164,7 +165,7 @@ main#main_index section article #title
     border-radius: 10px;
 }
 
-main#main_index section article h1
+main#main_index section article #title h1
 {
     font-family: 'Courgette', cursive;
     margin: 0;
@@ -173,6 +174,23 @@ main#main_index section article h1
     font-size: 30px;
     margin-top: 1%;
     color: white;
+}
+main#main_index section article #content
+{
+    height: 90%;
+    width: 100%;
+}
+main#main_index section article #content p
+{
+    color: rgb(240, 182, 255);
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+main#main_index section article #content video
+{
+    margin-left: 10%;
+    width: 80%;
+    border-radius: 5px;
 }
 
 /* PAGE REGISTER */
@@ -285,7 +303,7 @@ main#main_livre-or section#section_livre-or
 main#main_livre-or section#section_livre-or .post
 {
     width: 56%;
-    height: 36%;
+    height: 16%;
     padding: 2%;
     background-color: #333;
     margin-top: 5%;
@@ -302,7 +320,7 @@ main#main_livre-or section#section_livre-or .post #user_info h1
 {
     margin: 0;
     text-align: center;
-    color: rgb(164, 148, 255);
+    color: rgb(240, 182, 255);
     border-bottom: 1px solid rgb(120, 96, 255);
 }
 main#main_livre-or section#section_livre-or .post #user_message
@@ -350,4 +368,65 @@ main#main_livre-or section#section_livre-or .post #user_message form input
     color: white;
     cursor: pointer;
     outline: none;
+}
+main#main_livre-or section#section_livre-or .post#create_post
+{
+    height: 36%;
+}
+#main_profil
+{
+    margin-left: 20%;
+    height: 100%;
+    width: 80%;
+    background-image: url('ressources/images/backgrounds/background.jpg');
+    background-size: 110%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position-x: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+#main_profil section
+{
+    height: 35%;
+    width: 28%;
+    margin-left: 33%;
+    padding: 1%;
+    border-radius: 10px;
+    border: 2px solid rgb(22, 7, 56);
+    background-color: #333;
+}
+#main_profil section form
+{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+#main_profil section form h1
+{
+    text-align: center;
+}
+#main_profil section form input
+{
+    width: 68%;
+    background-color: rgb(31, 31, 31);
+    border: 2px solid rgb(97, 58, 189);
+    font-size: 20px;
+    border-radius: 7px;
+    padding: 1%;
+    text-align: center;
+    color: snow;
+    outline: none;
+    transition-property: border;
+    transition-duration: 300ms;
+}
+#main_profil section form input[type="submit"]
+{
+    width: 30%;
+    outline: none;
+    cursor: pointer;
 }
